--- a/index.html
+++ b/index.html
@@ -21,19 +21,23 @@
     </nav>
 
     <section id="project" class="section">
-        <h2>Project</h2>
+        <h2>project</h2>
+        <a href="project1/sentences-check.html">
         <div class="project-container">
             <div class="project-card">
                 <h3>Project 1</h3>
-                <p>coming soon...</p>
+                <p>sentences-checker //comming-soon </p>
             </div>
         </div>
+        </a>
     </section>
 
     <section id="about" class="section">
         <h2>About Us</h2>
-        <div class="about-container">
-            <p>ข้อมูลเกี่ยวกับทีมของเรา...</p>
+        <div class="project-container">
+            <div class="project-card">
+                <p>ข้อมูลเกี่ยวกับทีมของเรา...</p>
+            </div>
         </div>
     </section>
 
