sentences-check.html

--- a/project1/sentences-check.html
+++ b/project1/sentences-check.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project1</title>
+    <title>Project 1</title>
     <link rel="stylesheet" href="/team-website/styles.css">
 
 </head>
@@ -11,7 +11,7 @@
     <div>
     <h1> Project1 </h1>
 
-    <form action="https://youtu.be/3yaab2_EEHM?si=TmsXGaanBZowlvkq">
+    <form action="https://youtu.be/Ct6BUPvE2sM?si=LI8gNgmGwYTG6LHA">
         <label for="fname">your sentence:</label>
         <input type="text" id="fname" name="fname" value=""><br><br>
         <input type="submit" value="Submit">
