--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#project">Project</a>
             <a href="#about">About Us</a>
         </div>
-        <div id="clock"></div> <!-- นาฬิกาอยู่ด้านขวาสุด -->
+        <div id="clock"></div> 
     </nav>
 
     <section id="project" class="section">
@@ -26,7 +26,7 @@
         <div class="project-container">
             <div class="project-card">
                 <h3>Project 1</h3>
-                <p>sentences-checker //comming-soon </p>
+                <p>sentences checker comming soon... </p>
             </div>
         </div>
         </a>
